--- a/Partials/_layout.scss
+++ b/Partials/_layout.scss
@@ -1,7 +1,10 @@
+@use "./fonts" as *;
+
 body {
   height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  font-family: "Roboto", sans-serif;
 }
