--- a/style.css
+++ b/style.css
@@ -1,9 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");
 body {
   height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  font-family: "Roboto", sans-serif;
 }
 
 .color__orange {
@@ -43,10 +45,11 @@ button {
 .calculator__display {
   display: flex;
   justify-content: flex-end;
-  align-items: flex-end;
+  flex-wrap: wrap;
   color: white;
   font-size: 5rem;
   padding-right: 0.45em;
+  padding-top: 0.5em;
   border-radius: 7px;
 }
 .calculator__keys {
