--- a/Partials/_calculator.scss
+++ b/Partials/_calculator.scss
@@ -3,17 +3,29 @@
 .calculator {
   background-color: black;
   border-radius: 0.6rem;
+  // min-height: 90vh;
+  padding: 2em;
 
-  &__display {
+  &__output {
     display: flex;
-    justify-content: flex-end;
-    flex-wrap: wrap;
+    flex-direction: column;
+    background-color: rgba($color-dark-grey, 0.5);
+    justify-content: space-around;
+    align-items: flex-end;
+
+    padding: 0.5em;
+    min-height: 15rem;
 
     color: $color-white;
     font-size: 5rem;
-    padding-right: 0.45em;
-    padding-top: 0.5em;
+    // padding-right: 0.45em;
+    // padding-top: 0.5em;
+
     border-radius: 7px;
+
+    &--previous-value {
+      font-size: 2rem;
+    }
   }
 
   &__keys {
