--- a/style.css
+++ b/style.css
@@ -1,10 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");
 body {
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  width: 95%;
+  margin: 0 auto;
+  max-width: 25rem;
+  display: grid;
   font-family: "Roboto", sans-serif;
 }
 
@@ -49,8 +48,8 @@ button {
   background-color: rgba(48, 48, 48, 0.5);
   justify-content: space-around;
   align-items: flex-end;
-  padding: 0.5em;
-  min-height: 15rem;
+  padding: 0.3em;
+  min-height: 13rem;
   color: white;
   font-size: 5rem;
   border-radius: 7px;
@@ -60,8 +59,10 @@ button {
 }
 .calculator__keys {
   display: grid;
+  width: 95%;
+  margin: 0 auto;
+  max-width: 25rem;
   margin: 3rem 0;
-  padding: 0 1em;
   grid-template-columns: repeat(4, 1fr);
   justify-items: center;
   gap: 0.75rem;
